segundo formulario completo

--- a/escuela/templates/escuela/buscar.html
+++ b/escuela/templates/escuela/buscar.html
@@ -3,7 +3,7 @@
 
 {% block contenido %}
     <form method="GET" action="">
-        Titulo: <input type="text">
+        Titulo: <input type="text" name="titulo">
         <input type="submit">
     </form>
 {% endblock contenido %}
