tercer formulario exitoso

--- a/voluntariado/templates/voluntariado/formVol.html
+++ b/voluntariado/templates/voluntariado/formVol.html
@@ -2,7 +2,7 @@
 
 
 {% block contenido %}
-    <h1>Voluntarios</h1>
+    <h1>Registro de voluntarios</h1>
 
     <form method="POST" action="">
         {% csrf_token %}
