--- a/voluntariado/templates/index.html
+++ b/voluntariado/templates/index.html
@@ -31,7 +31,7 @@
 					<div class="col-md-6 d-flex align-items-center">
 						<p class="mb-0 phone pl-md-2">
 							<a href="#" class="mr-2"><span class="fa fa-phone mr-1"></span> +00 1234 567</a> 
-							<a href="#"><span class="fa fa-paper-plane mr-1"></span> youremail@email.com</a>
+							<a href="#"><span class="fa fa-paper-plane mr-1"></span> canito.escuela@gmail.com</a>
 						</p>
 					</div>
 					<div class="col-md-6 d-flex justify-content-md-end">
@@ -57,8 +57,8 @@
 	        <ul class="navbar-nav ml-auto">
 	        	<li class="nav-item active"><a href="{% url 'InicioVoluntariado' %}" class="nav-link">Inicio</a></li>
 	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	        	<li class="nav-item"><a href="vet.html" class="nav-link">Veterinarian</a></li>
-	        	<li class="nav-item"><a href="{% url 'NuevoVoluntario' %}" class="nav-link">Voluntariado</a></li>
+	        	<li class="nav-item"><a href="{% url 'NuevoFacilitador' %}" class="nav-link">Facilitadores</a></li>
+	        	<li class="nav-item"><a href="{% url 'NuevoVoluntario' %}" class="nav-link">Voluntarios</a></li>
 	          <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
 	          <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
