--- a/voluntariado/templates/index.html
+++ b/voluntariado/templates/index.html
@@ -56,7 +56,7 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	        	<li class="nav-item active"><a href="{% url 'InicioVoluntariado' %}" class="nav-link">Inicio</a></li>
-	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+	        	<li class="nav-item"><a href="{% url 'BuscarResultados' %}" class="nav-link">Buscar voluntarios</a></li>
 	        	<li class="nav-item"><a href="{% url 'NuevoFacilitador' %}" class="nav-link">Facilitadores</a></li>
 	        	<li class="nav-item"><a href="{% url 'NuevoVoluntario' %}" class="nav-link">Voluntarios</a></li>
 	          <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
