quinto formulario exitoso

--- a/escuela/templates/escuela/resultado_buscar.html
+++ b/escuela/templates/escuela/resultado_buscar.html
@@ -2,7 +2,7 @@
 
 
 {% block contenido %}
-    
+    <h1>Aquí podrás ver los resultados de la búsqueda de clases</h1>    
 {% for clase in clases %}
         {{clase}} <br/>
     {% endfor %}
