--- a/voluntariado/templates/index.html
+++ b/voluntariado/templates/index.html
@@ -55,14 +55,14 @@
 	      </button>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	        	<li class="nav-item active"><a href="{% url 'InicioVoluntariado' %}" class="nav-link">Inicio</a></li>
-	        	<li class="nav-item"><a href="{% url 'BuscarResultados' %}" class="nav-link">Buscar voluntarios</a></li>
-	        	<li class="nav-item"><a href="{% url 'NuevoFacilitador' %}" class="nav-link">Facilitadores</a></li>
-	        	<li class="nav-item"><a href="{% url 'NuevoVoluntario' %}" class="nav-link">Voluntarios</a></li>
-	          <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-	          <li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+	        	<li class="nav-item active"><a href="{% url 'InicioEscuela' %}" class="nav-link">Escuela</a></li>
+	        	<li class="nav-item"><a href="{% url 'InicioVoluntariado' %}" class="nav-link">Voluntariado</a></li>
+	        	<li class="nav-item"><a href="{% url 'NuevaClase' %}" class="nav-link">Clases</a></li>
+	        	<li class="nav-item"><a href="{% url 'BuscarResultados2' %}" class="nav-link">Buscar clase</a></li>
+	          <li class="nav-item"><a href="{% url 'NuevoFacilitador' %}" class="nav-link">Facilitadores</a></li>
+	          <li class="nav-item"><a href="" class="nav-link">Buscar facilitador</a></li>
+	          <li class="nav-item"><a href="{% url 'NuevoVoluntario' %}" class="nav-link">Voluntarios</a></li>
+	          <li class="nav-item"><a href="{% url 'BuscarResultados' %}" class="nav-link">Buscar voluntario</a></li>
 	        </ul>
 	      </div>
 	    </div>
