--- a/voluntariado/templates/voluntariado/resultado_buscar.html
+++ b/voluntariado/templates/voluntariado/resultado_buscar.html
@@ -2,7 +2,7 @@
 
 
 {% block contenido %}
-    <h1>Aquí podrás ver los resultados de la búsqueda</h1>
+    <h1>Aquí podrás ver los resultados de la búsqueda de voluntarios</h1>
 {% for voluntario in voluntarios %}
         {{voluntario}} <br/>
     {% endfor %}
